# jotty

./: .gitignore  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  JottyEditor.cpp  JottyEditor.h  JottyWindow.cpp  JottyWindow.h  Makefile  jotty.conf  jotty.pro  main.cpp
src/: ConfigManager.cpp  ConfigManager.h  JottyEditor.h  JottyWindow.cpp  main.cpp
